fix: Refactor WordPress and MariaDB configurations for improved deployment and access

--- a/apps/support/wordpress/base/kustomization.yaml
+++ b/apps/support/wordpress/base/kustomization.yaml
@@ -4,8 +4,8 @@ namespace: wordpress
 resources:
   - namespace.yaml
   - secret-db.yaml
-  - mariadb-statefulset.yaml
   - mariadb-svc.yaml
-  - wordpress-deploy.yaml
+  - mariadb-statefulset.yaml
   - wordpress-svc.yaml
-
+  - wordpress-deploy.yaml
+  - ingress.yaml
