--- a/apps/support/wordpress/base/secret-db.yaml
+++ b/apps/support/wordpress/base/secret-db.yaml
@@ -3,12 +3,9 @@ kind: Secret
 metadata:
   name: wp-db-secret
   namespace: wordpress
-  labels:
-    app.kubernetes.io/name: wordpress
-    app.kubernetes.io/part-of: wordpress
 type: Opaque
 stringData:
-  mariadb-root-password: "CHANGE_ME_ROOT"
+  mariadb-root-password: "changeme-root"
   mariadb-user: "wpuser"
-  mariadb-password: "CHANGE_ME_USER_PASS"
+  mariadb-password: "changeme-wp"
   mariadb-database: "wordpress"
