--- a/apps/support/wordpress/base/ingress.yaml
+++ b/apps/support/wordpress/base/ingress.yaml
@@ -4,12 +4,13 @@ metadata:
   name: wordpress
   namespace: wordpress
   annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-dns"
     nginx.ingress.kubernetes.io/proxy-body-size: "64m"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   ingressClassName: nginx
   rules:
-    - host: wp.support4u.se
+    - host: wordpress.support4u.se
       http:
         paths:
           - path: /
@@ -20,5 +21,5 @@ spec:
                 port:
                   number: 80
   tls:
-    - hosts: ["wp.support4u.se"]
+    - hosts: ["wordpress.support4u.se"]
       secretName: wordpress-tls
