--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -1,7 +1,5 @@
-# kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: wordpress
 resources:
   - ../../base
-  - ingress.yaml
-
