--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -16,15 +16,17 @@ spec:
       terminationGracePeriodSeconds: 60
       initContainers:
         - name: wait-for-db
-          image: busybox:1.36
+          image: mariadb:11.4
           command:
             - sh
             - -c
             - |
               echo "Waiting for DB DNS..."
-              until nslookup mariadb.wordpress.svc.cluster.local; do sleep 2; done
-              echo "Waiting for DB ping..."
+              until getent hosts mariadb.wordpress.svc.cluster.local; do sleep 2; done
+              echo "Waiting for DB mysqladmin ping..."
               until mysqladmin ping -hmariadb.wordpress.svc.cluster.local -u"$WORDPRESS_DB_USER" -p"$WORDPRESS_DB_PASSWORD" --silent; do sleep 2; done
+              echo "DB is up."
+
           env:
             - name: WORDPRESS_DB_USER
               valueFrom:
