--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -69,3 +69,12 @@ spec:
             periodSeconds: 10
             failureThreshold: 12
             timeoutSeconds: 3
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        storageClassName: ceph01
+        resources:
+          requests:
+            storage: 10Gi
