fix: Update storage configurations for MariaDB and WordPress to use Longhorn

--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -112,8 +112,8 @@ metadata:
   name: wp-content
   namespace: wordpress
 spec:
-  accessModes: ["ReadWriteOnce"]
-  storageClassName: cephfs
+  accessModes: ["ReadWriteMany"]
+  storageClassName: longhorn
   resources:
     requests:
       storage: 5Gi
