--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -74,7 +74,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: ceph01
+        storageClassName: longhorn
         resources:
           requests:
             storage: 10Gi
