--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -18,11 +18,6 @@ spec:
         - name: wait-for-db
           image: mariadb:11.4
           env:
-            - name: MARIADB_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mariadb-secret
-                  key: mariadb-root-password
             - name: WORDPRESS_DB_USER
               valueFrom:
                 secretKeyRef:
@@ -33,20 +28,21 @@ spec:
                 secretKeyRef:
                   name: mariadb-secret
                   key: mariadb-password
+            - name: WORDPRESS_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mariadb-secret
+                  key: mariadb-database
           command:
             - sh
             - -c
             - |
               set -e
-              DB_FQDN="mariadb.wordpress.svc.cluster.local"
+              DB="mariadb.wordpress.svc.cluster.local"
               echo "Waiting for DB DNS..."
-              until getent hosts "$DB_FQDN" >/dev/null 2>&1; do sleep 2; done
-              echo "Waiting for mysqladmin ping (root)..."
-              until mysqladmin ping -h "$DB_FQDN" -uroot -p"$MARIADB_ROOT_PASSWORD" --silent; do sleep 2; done
-              echo "Checking SQL (root)..."
-              mysql -h "$DB_FQDN" -uroot -p"$MARIADB_ROOT_PASSWORD" -e "SELECT 1" >/dev/null
-              echo "Checking app user auth..."
-              until mysql -h "$DB_FQDN" -u"$WORDPRESS_DB_USER" -p"$WORDPRESS_DB_PASSWORD" -e "SELECT 1" >/dev/null 2>&1; do sleep 2; done
+              until getent hosts "$DB" >/dev/null 2>&1; do sleep 2; done
+              echo "Waiting for DB (app-user SELECT 1)..."
+              until mariadb -h "$DB" -u"$WORDPRESS_DB_USER" -p"$WORDPRESS_DB_PASSWORD" -N -e "SELECT 1" >/dev/null 2>&1; do sleep 2; done
               echo "DB ready."
       containers:
         - name: wordpress
@@ -86,21 +82,21 @@ spec:
               path: /
               port: 80
             periodSeconds: 5
-            failureThreshold: 60
-            timeoutSeconds: 2
+            failureThreshold: 120
+            timeoutSeconds: 3
           readinessProbe:
             httpGet:
               path: /
               port: 80
             periodSeconds: 5
             failureThreshold: 6
-            timeoutSeconds: 2
+            timeoutSeconds: 3
           livenessProbe:
             tcpSocket:
               port: 80
             periodSeconds: 10
             failureThreshold: 6
-            timeoutSeconds: 2
+            timeoutSeconds: 3
       volumes:
         - name: wp-content
           persistentVolumeClaim:
