--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -3,6 +3,8 @@ kind: StatefulSet
 metadata:
   name: mariadb
   namespace: wordpress
+  annotations:
+  argocd.argoproj.io/sync-options: Replace=true
 spec:
   serviceName: mariadb
   replicas: 1
