fix: Add apiVersion and kind to volumeClaimTemplates in MariaDB StatefulSet

--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -70,7 +70,9 @@ spec:
             failureThreshold: 12
             timeoutSeconds: 3
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
