--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -78,25 +78,21 @@ spec:
               cpu: "500m"
               memory: "512Mi"
           startupProbe:
-            httpGet:
-              path: /
-              port: 80
+            tcpSocket: { port: 80 }
             periodSeconds: 5
             failureThreshold: 120
-            timeoutSeconds: 3
+            timeoutSeconds: 2
           readinessProbe:
             httpGet:
-              path: /
+              path: /readme.html   # lätt statisk fil
               port: 80
             periodSeconds: 5
-            failureThreshold: 6
-            timeoutSeconds: 3
-          livenessProbe:
-            tcpSocket:
-              port: 80
-            periodSeconds: 10
-            failureThreshold: 6
-            timeoutSeconds: 3
+            failureThreshold: 12
+            timeoutSeconds: 10
+          lifecycle:
+            preStop:
+              exec:
+                command: ["sh","-c","sleep 5"]
       volumes:
         - name: wp-content
           persistentVolumeClaim:
