--- a/apps/support/wordpress/base/ingress.yaml
+++ b/apps/support/wordpress/base/ingress.yaml
@@ -11,9 +11,20 @@ spec:
   tls:
     - hosts:
         - wordpress.support4u.se
+        - www.taberg.info        
       secretName: wordpress-tls
   rules:
     - host: wordpress.support4u.se
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: wordpress
+                port:
+                  number: 80
+    - host: www.taberg.info
       http:
         paths:
           - path: /
