--- a/apps/support/wordpress-redis/base/kustomization.yaml
+++ b/apps/support/wordpress-redis/base/kustomization.yaml
@@ -9,5 +9,9 @@ resources:
   - redis-statefulset.yaml
   - redis-service.yaml
 
-patchesStrategicMerge:
-  - wordpress-patch.yaml
+patches:
+  - path: wordpress-patch.yaml
+    target:
+      kind: Deployment
+      name: wordpress
+      namespace: wordpress
