fix: Update storage class for Redis StatefulSet to longhorn

--- a/apps/support/wordpress-redis/base/redis-statefulset.yaml
+++ b/apps/support/wordpress-redis/base/redis-statefulset.yaml
@@ -46,4 +46,4 @@ spec:
         resources:
           requests:
             storage: 2Gi
-        storageClassName: shared-nfs
+        storageClassName: longhorn
