--- a/apps/support/wordpress-redis/base/redis-statefulset.yaml
+++ b/apps/support/wordpress-redis/base/redis-statefulset.yaml
@@ -39,7 +39,9 @@ spec:
             - name: data
               mountPath: /data
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
@@ -47,3 +49,4 @@ spec:
           requests:
             storage: 2Gi
         storageClassName: longhorn
+        
