--- a/apps/support/wordpress-redis/base/kustomization.yaml
+++ b/apps/support/wordpress-redis/base/kustomization.yaml
@@ -9,8 +9,9 @@ resources:
   - redis-service.yaml
 
 patches:
-  - path: wordpress-patch.yaml
+  - path: wordpress-env-patch.yaml
     target:
+      group: apps
+      version: v1
       kind: Deployment
-      name: wordpress
-      namespace: wordpress
+      labelSelector: "app=wordpress"
