fix: Add WordPress environment patch for Redis configuration and remove unused local-path overlay

--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -3,4 +3,12 @@ kind: Kustomization
 namespace: wordpress
 resources:
   - ../../base
-# Add env-specific patches here if needed (hosts, issuer, resources, etc).
+
+patches:
+  - path: wordpress-env-patch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: wordpress        # ändra om namnet är annat
+      namespace: wordpress
