fix: Add Ingress cache configuration for WordPress

--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -12,3 +12,10 @@ patches:
       kind: Deployment
       name: wordpress        # ändra om namnet är annat
       namespace: wordpress
+  - path: wordpress-ingress-cache-patch.yaml
+    target:
+      group: networking.k8s.io
+      version: v1
+      kind: Ingress
+      name: wordpress            # ändra om ditt namn skiljer sig
+      namespace: wordpress
