--- a/apps/support/wordpress/overlays/homelab/wordpress-ingress-cache-patch.yaml
+++ b/apps/support/wordpress/overlays/homelab/wordpress-ingress-cache-patch.yaml
@@ -8,6 +8,5 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-cache-key: "$scheme$request_method$host$request_uri"
     nginx.ingress.kubernetes.io/proxy-cache-bypass: "$cookie_logged_in"
     nginx.ingress.kubernetes.io/proxy-cache-valid: "200 301 302 10m"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_ignore_headers Set-Cookie;
-      add_header X-Cache-Status $upstream_cache_status;
+    nginx.ingress.kubernetes.io/proxy-ignore-headers: "Set-Cookie"
+
