--- a/apps/support/wordpress/overlays/homelab/wordpress-ingress-cache-patch.yaml
+++ b/apps/support/wordpress/overlays/homelab/wordpress-ingress-cache-patch.yaml
@@ -4,6 +4,9 @@ metadata:
   name: wordpress               # byt till ditt ingress-namn
   namespace: wordpress
   annotations:
+    nginx.ingress.kubernetes.io/proxy-buffering: "on"
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
     nginx.ingress.kubernetes.io/proxy-cache: "wp-cache"
     nginx.ingress.kubernetes.io/proxy-cache-key: "$scheme$request_method$host$request_uri"
     nginx.ingress.kubernetes.io/proxy-cache-bypass: "$cookie_logged_in"
