--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -4,6 +4,8 @@ namespace: wordpress
 resources:
   - ../../base
   - mariadb-tuning-configmap.yaml
+  - wp-php-ini-configmap.yaml
+  - cronjob-wp-cron.yaml
 
 patches:
   - path: mariadb-tuning-patch.yaml
@@ -27,3 +29,20 @@ patches:
       kind: Ingress
       name: wordpress            # ändra om ditt namn skiljer sig
       namespace: wordpress
+
+  - path: wordpress-php-ini-patch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: wordpress
+      namespace: wordpress
+
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: wordpress
+      namespace: wordpress
+    path: wordpress-resources-patch.json
