--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -8,6 +8,13 @@ resources:
   - cronjob-wp-cron.yaml
 
 patches:
+  - path: wordpress-resources-patch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: wordpress
+      namespace: wordpress
   - path: mariadb-tuning-patch.yaml
     target:
       group: apps
@@ -38,11 +45,3 @@ patches:
       name: wordpress
       namespace: wordpress
 
-patchesJson6902:
-  - target:
-      group: apps
-      version: v1
-      kind: Deployment
-      name: wordpress
-      namespace: wordpress
-    path: wordpress-resources-patch.json
