--- a/apps/support/wordpress/overlays/homelab/wordpress-env-patch.yaml
+++ b/apps/support/wordpress/overlays/homelab/wordpress-env-patch.yaml
@@ -28,3 +28,4 @@ spec:
             if (!defined('WP_CACHE_KEY_SALT')) define('WP_CACHE_KEY_SALT', getenv('WP_CACHE_KEY_SALT') ?: 'wp:site:');
             if (!defined('WP_REDIS_DATABASE')) define('WP_REDIS_DATABASE', 0);
             if (!defined('WP_CACHE')) define('WP_CACHE', true);
+            if (!defined('DISABLE_WP_CRON')) define('DISABLE_WP_CRON', true);
