--- a/clusters/homelab/bootstrap/root-app.yaml
+++ b/clusters/homelab/bootstrap/root-app.yaml
@@ -19,7 +19,7 @@ spec:
       selfHeal: false
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
-      - Replace=true              # <- viktigt för immutable fält (t.ex. namespace)
+      - ServerSideApply=false
+      - Replace=false              # <- viktigt för immutable fält (t.ex. namespace)
       - PruneLast=true            # <- pruna sist, efter nyskapande
       - PrunePropagationPolicy=foreground
