--- a/apps/support/glpi/overlays/homelab/ingress.yaml
+++ b/apps/support/glpi/overlays/homelab/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: glpi
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: letsencrypt-dns
 spec:
   ingressClassName: nginx
   tls:
