--- a/apps/support/glpi/base/glpi-deployment.yaml
+++ b/apps/support/glpi/base/glpi-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: glpi
-          image: glpi/glpi:latest
+          image: glpi/glpi:11.0.2
           imagePullPolicy: IfNotPresent
           envFrom:
             - secretRef:
