fix: Update n8n container image to specific version 1.119.0

--- a/apps/support/n8n/base/deployment.yaml
+++ b/apps/support/n8n/base/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           - 1.1.1.1       # Cloudflare som fallback
       containers:
         - name: n8n
-          image: n8nio/n8n:latest
+          image: n8nio/n8n:1.119.0
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5678
