fix: Add cert-manager cluster issuer annotation for Keycloak ingress

--- a/apps/system-tools/keycloak/overlays/homelab/ingress.yaml
+++ b/apps/system-tools/keycloak/overlays/homelab/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+    cert-manager.io/cluster-issuer: "letsencrypt-dns"
 spec:
   ingressClassName: nginx
   # Ta bort tls-blocket om du inte kör cert-manager ännu
