--- a/apps/system-tools/keycloak/base/postgres-deployment.yaml
+++ b/apps/system-tools/keycloak/base/postgres-deployment.yaml
@@ -23,7 +23,10 @@ spec:
             - containerPort: 5432
           volumeMounts:
             - name: data
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql/data/pgdata
+          env:
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
       volumes:
         - name: data
           persistentVolumeClaim:
