fix: Update patches section to use patchesStrategicMerge for wordpress-env-patch.yaml

--- a/apps/support/wordpress-redis/base/kustomization.yaml
+++ b/apps/support/wordpress-redis/base/kustomization.yaml
@@ -8,10 +8,5 @@ resources:
   - redis-statefulset.yaml
   - redis-service.yaml
 
-patches:
-  - path: wordpress-env-patch.yaml
-    target:
-      group: apps
-      version: v1
-      kind: Deployment
-      labelSelector: "app=wordpress"
+patchesStrategicMerge:
+  - wordpress-env-patch.yaml
