--- a/apps/support/wordpress/overlays/homelab/wp-php-ini-configmap.yaml
+++ b/apps/support/wordpress/overlays/homelab/wp-php-ini-configmap.yaml
@@ -6,7 +6,9 @@ metadata:
 data:
   00-custom.ini: |
     memory_limit=512M
-    max_execution_time=120
+    max_execution_time=300
+    upload_max_filesize=400M
+    post_max_size=400M
 
     opcache.enable=1
     opcache.enable_cli=1
