--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -69,10 +69,11 @@ spec:
                   key: mariadb-database
             - name: WORDPRESS_CONFIG_EXTRA
               value: |
-                @ini_set( 'upload_max_filesize', '400M' );
-                @ini_set( 'post_max_size',      '400M' );
+                @ini_set( 'upload_max_filesize', '600M' );
+                @ini_set( 'post_max_size', '600M' );
                 @ini_set( 'max_execution_time', '300'  );
-                @ini_set( 'memory_limit',       '512M' );
+                @ini_set( 'max_input_time', '300' );
+                @ini_set( 'memory_limit', '512M' );
           volumeMounts:
             - name: wp-content
               mountPath: /var/www/html/wp-content
