fix: Update container image for OpenWISP API deployment

--- a/apps/support/openwisp/base/api.yaml
+++ b/apps/support/openwisp/base/api.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: openwisp/openwisp-controller:latest
+          image: openwisp/openwisp-api:latest
           ports:
             - containerPort: 8000
               name: http
