--- a/apps/home-automation/nodered/base/deployment.yaml
+++ b/apps/home-automation/nodered/base/deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: nodered
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
         - name: nodered
           image: nodered/node-red:latest
