feat: Add InfluxDB deployment, PVC, and service configurations

--- a/apps/support/openwisp/base/kustomization.yaml
+++ b/apps/support/openwisp/base/kustomization.yaml
@@ -12,3 +12,6 @@ resources:
   - celery.yaml
   - celerybeat.yaml
   - websocket.yaml
+  - influxdb-pvc.yaml
+  - influxdb-deployment.yaml
+  - influxdb-service.yaml
