fix: Rename DB_PASSWORD to DB_PASS in PostgreSQL secret and deployment configuration

--- a/apps/support/openwisp/base/secret.yaml
+++ b/apps/support/openwisp/base/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: openwisp
 type: Opaque
 data:
-  DB_PASSWORD: "Y2hhbmdlbWUtZGItcGFzc3dvcmQ="
+  DB_PASS: "Y2hhbmdlbWUtZGItcGFzc3dvcmQ="
   DJANGO_SECRET_KEY: "c3VwZXItc2VjcmV0LWNoYW5nZS1tZS1jaGFuZ2UtdGhpcw=="
