--- a/apps/support/openwisp/base/postgres.yaml
+++ b/apps/support/openwisp/base/postgres.yaml
@@ -49,7 +49,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: openwisp-secret
-                  key: DB_PASSWORD
+                  key: DB_PASS
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           volumeMounts:
