feat: Update OpenWISP configurations to disable service links and correct InfluxDB host

--- a/apps/support/openwisp/base/api.yaml
+++ b/apps/support/openwisp/base/api.yaml
@@ -29,6 +29,7 @@ spec:
       labels:
         app: openwisp-api
     spec:
+      enableServiceLinks: false
       containers:
         - name: api
           image: openwisp/openwisp-api:latest
