--- a/apps/support/openwisp/base/celery.yaml
+++ b/apps/support/openwisp/base/celery.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: openwisp-celery
     spec:
+      enableServiceLinks: false
       containers:
         - name: celery
           image: openwisp/openwisp-dashboard:latest
