--- a/apps/support/openwisp/overlays/homelab/timeseries-fix.yaml
+++ b/apps/support/openwisp/overlays/homelab/timeseries-fix.yaml
@@ -8,6 +8,6 @@ data:
     {
       "ENGINE": "influxdb",
       "NAME": "openwisp2",
-      "HOST": "influxdb",
+      "HOST": "openwisp-influxdb",
       "PORT": 8086
     }
